--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.4",
     "core-js": "^3.6.5",
     "feather-icons": "^4.28.0",
     "lodash": "^4.17.21",
@@ -23,8 +24,8 @@
     "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-prettier": "^6.0.0",
     "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-prettier": "^3.3.1",
+    "eslint": "6.7.2",
+    "eslint-plugin-prettier": "3.3.1",
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^6.0.1",
     "prettier": "^2.2.1",
